Closed Bug 505667 Opened 15 years ago Closed 15 years ago

nsGfxScrollFrame::InvalidateInternal should not check for INVALIDATE_NOTIFY_ONLY

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: roc, Unassigned)

Details

Attachments

(1 file)

Attached patch fixSplinter Review
      No description provided.
Attachment #389874 - Flags: review?(dbaron)
Comment on attachment 389874 [details] [diff] [review]
fix

r=dbaron, thanks to...

interdiff -w /dev/null <(vs 'https://bug505667.bugzilla.mozilla.org/attachment.cgi?id=389874')

where vs is aliased to `wget -q -O -'
Attachment #389874 - Flags: review?(dbaron) → review+
http://hg.mozilla.org/mozilla-central/rev/55e3c943d73c
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: