Bug 505667. Don't need to check INVALIDATE_NOTIFY_ONLY in nsHTMLScrollFrame::InvalidateInternal. r=dbaron