layout/generic/nsGfxScrollFrame.cpp
@@ -230,26 +230,24 @@ nsHTMLScrollFrame::InvalidateInternal(const nsRect& aDamageRect,
                                       PRUint32 aFlags)
 {
   if (aForChild == mInner.mScrolledFrame) {
-    if (!(aFlags & INVALIDATE_NOTIFY_ONLY)) {
-      // restrict aDamageRect to the scrollable view's bounds
-      nsRect damage = aDamageRect + nsPoint(aX, aY);
-      nsRect r;
-      if (r.IntersectRect(damage, mInner.mScrollableView->View()->GetBounds())) {
-        nsHTMLContainerFrame::InvalidateInternal(r, 0, 0, aForChild, aFlags);
-      }
-      if (mInner.mIsRoot && r != damage) {
-        // Make sure we notify our prescontext about invalidations outside
-        // viewport clipping.
-        // This is important for things that are snapshotting the viewport,
-        // possibly outside the scrolled bounds.
-        // We don't need to propagate this any further up, though. Anyone who
-        // cares about scrolled-out-of-view invalidates had better be listening
-        // to our window directly.
-        PresContext()->NotifyInvalidation(damage,
-            (aFlags & INVALIDATE_CROSS_DOC) != 0);
-      }
-      return;
+    // restrict aDamageRect to the scrollable view's bounds
+    nsRect damage = aDamageRect + nsPoint(aX, aY);
+    nsRect r;
+    if (r.IntersectRect(damage, mInner.mScrollableView->View()->GetBounds())) {
+      nsHTMLContainerFrame::InvalidateInternal(r, 0, 0, aForChild, aFlags);
     }
+    if (mInner.mIsRoot && r != damage) {
+      // Make sure we notify our prescontext about invalidations outside
+      // viewport clipping.
+      // This is important for things that are snapshotting the viewport,
+      // possibly outside the scrolled bounds.
+      // We don't need to propagate this any further up, though. Anyone who
+      // cares about scrolled-out-of-view invalidates had better be listening
+      // to our window directly.
+      PresContext()->NotifyInvalidation(damage,
+          (aFlags & INVALIDATE_CROSS_DOC) != 0);
+    }
+    return;
   } else if (aForChild == mInner.mHScrollbarBox) {
     if (!mInner.mHasHorizontalScrollbar) {
       // Our scrollbars may send up invalidations even when they're collapsed,
